[gd_scene load_steps=5 format=3 uid="uid://c7wkfcwegnan7"]

[ext_resource type="Script" path="res://Scripts/Enemies/Enemy.gd" id="1_3au8y"]
[ext_resource type="FontFile" uid="uid://ycaiqwy2b78f" path="res://Assets/SpaceMono-Regular.ttf" id="2_ionsd"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("2_ionsd")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/13/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/14/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/15/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/2/0/ascent = 0.0
cache/0/2/0/descent = 0.0
cache/0/2/0/underline_position = 0.0
cache/0/2/0/underline_thickness = 0.0
cache/0/2/0/scale = 1.0
cache/0/2/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/13/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/14/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/15/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/2/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/3/0/ascent = 0.0
cache/0/3/0/descent = 0.0
cache/0/3/0/underline_position = 0.0
cache/0/3/0/underline_thickness = 0.0
cache/0/3/0/scale = 1.0
cache/0/3/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/13/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/14/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/15/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/3/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/4/0/ascent = 0.0
cache/0/4/0/descent = 0.0
cache/0/4/0/underline_position = 0.0
cache/0/4/0/underline_thickness = 0.0
cache/0/4/0/scale = 1.0
cache/0/4/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/13/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/14/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/15/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/4/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/5/0/ascent = 0.0
cache/0/5/0/descent = 0.0
cache/0/5/0/underline_position = 0.0
cache/0/5/0/underline_thickness = 0.0
cache/0/5/0/scale = 1.0
cache/0/5/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/13/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/14/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/15/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/5/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/6/0/ascent = 0.0
cache/0/6/0/descent = 0.0
cache/0/6/0/underline_position = 0.0
cache/0/6/0/underline_thickness = 0.0
cache/0/6/0/scale = 1.0
cache/0/6/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/13/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/14/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/15/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/6/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/7/0/ascent = 0.0
cache/0/7/0/descent = 0.0
cache/0/7/0/underline_position = 0.0
cache/0/7/0/underline_thickness = 0.0
cache/0/7/0/scale = 1.0
cache/0/7/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/13/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/14/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/15/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/7/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/8/0/ascent = 0.0
cache/0/8/0/descent = 0.0
cache/0/8/0/underline_position = 0.0
cache/0/8/0/underline_thickness = 0.0
cache/0/8/0/scale = 1.0
cache/0/8/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/13/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/14/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/15/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/8/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/9/0/ascent = 0.0
cache/0/9/0/descent = 0.0
cache/0/9/0/underline_position = 0.0
cache/0/9/0/underline_thickness = 0.0
cache/0/9/0/scale = 1.0
cache/0/9/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/13/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/14/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/15/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/10/0/ascent = 0.0
cache/0/10/0/descent = 0.0
cache/0/10/0/underline_position = 0.0
cache/0/10/0/underline_thickness = 0.0
cache/0/10/0/scale = 1.0
cache/0/10/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/13/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/14/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/15/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/11/0/ascent = 0.0
cache/0/11/0/descent = 0.0
cache/0/11/0/underline_position = 0.0
cache/0/11/0/underline_thickness = 0.0
cache/0/11/0/scale = 1.0
cache/0/11/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/13/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/14/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/15/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/12/0/ascent = 0.0
cache/0/12/0/descent = 0.0
cache/0/12/0/underline_position = 0.0
cache/0/12/0/underline_thickness = 0.0
cache/0/12/0/scale = 1.0
cache/0/12/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/12/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/12/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/12/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/12/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/12/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/12/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/12/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/12/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/12/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/12/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/12/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/12/0/kerning_overrides/13/0 = Vector2(0, 0)
cache/0/12/0/kerning_overrides/14/0 = Vector2(0, 0)
cache/0/12/0/kerning_overrides/15/0 = Vector2(0, 0)
cache/0/12/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/12/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/12/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/12/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/12/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/13/0/ascent = 0.0
cache/0/13/0/descent = 0.0
cache/0/13/0/underline_position = 0.0
cache/0/13/0/underline_thickness = 0.0
cache/0/13/0/scale = 1.0
cache/0/13/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/13/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/13/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/13/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/13/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/13/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/13/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/13/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/13/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/13/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/13/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/13/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/13/0/kerning_overrides/13/0 = Vector2(0, 0)
cache/0/13/0/kerning_overrides/14/0 = Vector2(0, 0)
cache/0/13/0/kerning_overrides/15/0 = Vector2(0, 0)
cache/0/13/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/13/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/13/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/13/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/13/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/14/0/ascent = 0.0
cache/0/14/0/descent = 0.0
cache/0/14/0/underline_position = 0.0
cache/0/14/0/underline_thickness = 0.0
cache/0/14/0/scale = 1.0
cache/0/14/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/14/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/14/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/14/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/14/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/14/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/14/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/14/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/14/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/14/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/14/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/14/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/14/0/kerning_overrides/13/0 = Vector2(0, 0)
cache/0/14/0/kerning_overrides/14/0 = Vector2(0, 0)
cache/0/14/0/kerning_overrides/15/0 = Vector2(0, 0)
cache/0/14/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/14/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/14/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/14/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/14/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/15/0/ascent = 0.0
cache/0/15/0/descent = 0.0
cache/0/15/0/underline_position = 0.0
cache/0/15/0/underline_thickness = 0.0
cache/0/15/0/scale = 1.0
cache/0/15/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/15/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/15/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/15/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/15/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/15/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/15/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/15/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/15/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/15/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/15/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/15/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/15/0/kerning_overrides/13/0 = Vector2(0, 0)
cache/0/15/0/kerning_overrides/14/0 = Vector2(0, 0)
cache/0/15/0/kerning_overrides/15/0 = Vector2(0, 0)
cache/0/15/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/15/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/15/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/15/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/15/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/17/0/ascent = 0.0
cache/0/17/0/descent = 0.0
cache/0/17/0/underline_position = 0.0
cache/0/17/0/underline_thickness = 0.0
cache/0/17/0/scale = 1.0
cache/0/17/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/13/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/14/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/15/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/17/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/18/0/ascent = 0.0
cache/0/18/0/descent = 0.0
cache/0/18/0/underline_position = 0.0
cache/0/18/0/underline_thickness = 0.0
cache/0/18/0/scale = 1.0
cache/0/18/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/13/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/14/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/15/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/18/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/19/0/ascent = 0.0
cache/0/19/0/descent = 0.0
cache/0/19/0/underline_position = 0.0
cache/0/19/0/underline_thickness = 0.0
cache/0/19/0/scale = 1.0
cache/0/19/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/13/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/14/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/15/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/19/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/20/0/ascent = 0.0
cache/0/20/0/descent = 0.0
cache/0/20/0/underline_position = 0.0
cache/0/20/0/underline_thickness = 0.0
cache/0/20/0/scale = 1.0
cache/0/20/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/13/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/14/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/15/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/20/0/kerning_overrides/21/0 = Vector2(0, 0)
cache/0/21/0/ascent = 0.0
cache/0/21/0/descent = 0.0
cache/0/21/0/underline_position = 0.0
cache/0/21/0/underline_thickness = 0.0
cache/0/21/0/scale = 1.0
cache/0/21/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/2/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/3/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/4/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/5/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/6/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/7/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/8/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/13/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/14/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/15/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/17/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/18/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/19/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/20/0 = Vector2(0, 0)
cache/0/21/0/kerning_overrides/21/0 = Vector2(0, 0)

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(28.6667, 52.6667)

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1_3au8y")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = -90.0
offset_top = 36.0
offset_right = 90.0
offset_bottom = 70.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/shadow_outline_size = 6
theme_override_constants/outline_size = 0
theme_override_fonts/normal_font = SubResource("1")
theme_override_font_sizes/normal_font_size = 21
bbcode_enabled = true
text = "[center]Type this![/center]"
scroll_active = false
progress_bar_delay = 1005
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2.5, -7.5)
scale = Vector2(1.5, 1.5)
shape = SubResource("2")

[node name="StunnedTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 1.2
one_shot = true

[connection signal="timeout" from="StunnedTimer" to="." method="_on_stunned_timer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
